tests/neg/type_alias_redefine.baa
// EXPECT: تعريف اسم نوع بديل مكرر

نوع معرف = ط٦٤.
نوع معرف = ص٣٢.

صحيح الرئيسية() {
    إرجع ٠.
}
